--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -135,9 +135,9 @@
       <br>
 
       {% if site.enable_footnote %}
-      <p><small>Powered by Jekyll and <a href="https://github.com/yaoyao-liu/minimal-light" target="_blank" rel="noopener">Minimal Light</a> theme.</small></p>
+      <p><small>Feel free to use my website's<a href="https://github.com/kaisunoo/kaisunoo.github.io" target="_blank" rel="noopener" >source code.</a></small></p>
       {% endif %}
-
+        
       </section>
       <footer>
         
