--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -101,7 +101,7 @@
       <br>
 
       {% if site.enable_footnote %}
-      <p><small>Feel free to use my website's<a href="https://github.com/kaisunoo/kaisunoo.github.io" target="_blank" rel="noopener" > source code.</a></small></p>
+      <p><small>Feel free to use my website's<a href="https://github.com/kaisunoo/minimal-light" target="_blank" rel="noopener" > source code.</a></small></p>
       {% endif %}
         
       </section>
